syntax = "proto3";
package cart;

service CartService {
    rpc addToCart(CartRequest) returns (Product) {}
    rpc viewCart(ViewCartRequest) returns (CurrentCart){}
    rpc removeCartItem(RemoveCartItemRequest) returns(RemoveCartItemResponse){}
}


message CartRequest {
    required string productUUID = 1;
    required string customerID = 2;
    required int32 productQuantity = 3;
}

message RemoveCartItemRequest {
    required string customerID = 1;
    required string productUUID = 2;
}

message RemoveCartItemResponse {
    required string productUUID = 1;
}

message Product {
    required string productName = 1;
    required int32 productPrice = 2;
    required string productUUID = 3;
    required string productDescription = 4;
    required string productImage = 5;
    required int32 productQuantity = 6;
}

message CurrentCart{
    repeated Product productsInCart = 1;
}

message ViewCartRequest {
    required string customerID = 1;
}